hey, it's zashboard now

--- a/config/AIO.yaml
+++ b/config/AIO.yaml
@@ -22,9 +22,9 @@ allow-lan: true
 unified-delay: true
 tcp-concurrent: true
 external-ui: ui
-external-ui-name: singdash
+external-ui-name: zashboard
 external-controller: 0.0.0.0:9090
-external-ui-url: https://raw.e11z.net/github.com/Zephyruso/sing-box-dashboard/archive/refs/heads/gh-pages.zip
+external-ui-url: https://raw.e11z.net/github.com/Zephyruso/zashboard/archive/refs/heads/gh-pages.zip
 
 keep-alive-idle: 600
 keep-alive-interval: 15
