--- a/.github/workflows/merge.yaml
+++ b/.github/workflows/merge.yaml
@@ -15,6 +15,13 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
+    - name: Install mihomo
+      run: |
+        curl -skLo mihomo.gz https://github.com/MetaCubeX/mihomo/releases/download/v1.18.10/mihomo-linux-amd64-v1.18.10.gz
+        gzip -d mihomo.gz
+        chmod +x mihomo
+        sudo mv mihomo /usr/local/bin/
+
     - name: Download and process lists
       run: |
         curl https://adrules.top/adrules_domainset.txt -o adrules_domainset.txt
@@ -22,10 +29,7 @@ jobs:
         cat adrules_domainset.txt multi.txt | sed '/^#/d' | sort | uniq > combined.txt
         awk '/^\+\./ {gsub(/^\+/, "*"); print}' combined.txt > exclude_list.txt
         awk 'NR==FNR {exclude[$0]; next} !($0 in exclude)' exclude_list.txt combined.txt | sort | uniq > ADs_merged_temp.txt
-        curl -skLo mihomo.gz https://github.com/MetaCubeX/mihomo/releases/download/v1.18.8/mihomo-linux-amd64-v1.18.8.gz
-        gzip -d mihomo.gz
-        chmod +x mihomo
-        ./mihomo convert-ruleset domain text ADs_merged_temp.txt ADs_merged.mrs
+        mihomo convert-ruleset domain text ADs_merged_temp.txt ADs_merged.mrs
 
     - name: Commit and push changes
       run: |
