--- a/config/AIO.yaml
+++ b/config/AIO.yaml
@@ -1,10 +1,10 @@
 # 策略组相关
 pr: &pr {type: select, proxies: [节点选择, 🇭🇰 香港, 🇼🇸 台湾, 🇯🇵 日本, 🇸🇬 新加坡, 🇺🇸 美国, 其他, DIRECT]}
-url-test: &url-test {type: url-test, url: https://latency-test.skk.moe/endpoint, interval: 300, include-all: true, exclude-filter: "LAN"}
-fallback: &fallback {type: fallback, url: https://latency-test.skk.moe/endpoint, interval: 300, include-all: true, exclude-filter: "LAN"}
-load-balance: &load-balance {type: load-balance, url: https://latency-test.skk.moe/endpoint, interval: 300, include-all: true, strategy: sticky-sessions, exclude-filter: "LAN"}
+url-test: &url-test {type: url-test, url: https://latency-test.lab.skk.moe/endpoint, interval: 300, include-all: true, exclude-filter: "LAN"}
+fallback: &fallback {type: fallback, url: https://latency-test.lab.skk.moe/endpoint, interval: 300, include-all: true, exclude-filter: "LAN"}
+load-balance: &load-balance {type: load-balance, url: https://latency-test.lab.skk.moe/endpoint, interval: 300, include-all: true, strategy: sticky-sessions, exclude-filter: "LAN"}
 # 这里是订阅更新和延迟测试相关的
-p: &p {type: http, interval: 86400, health-check: {enable: true, url: "https://latency-test.skk.moe/endpoint", interval: 600}}
+p: &p {type: http, interval: 86400, health-check: {enable: true, url: "https://latency-test.lab.skk.moe/endpoint", interval: 300}}
 
 proxies:
   - {name: LAN, type: direct, udp: true, interface-name: br-lan}
