--- a/config/AIO.yaml
+++ b/config/AIO.yaml
@@ -58,13 +58,15 @@ tun:
 
 dns:
   enable: true
-  ipv6: false
+  ipv6: true
   respect-rules: true
   listen: 0.0.0.0:1053
   enhanced-mode: redir-host
   nameserver:
-    - "https://208.67.222.2/dns-query"
-    - "https://9.9.9.9/dns-query"
+    - "https://cool.ihtw.moe:6643/ihtw" # mine,use at ur own risk!
+#  nameserver:
+#    - "https://208.67.222.2/dns-query"
+#    - "https://9.9.9.9/dns-query"
   proxy-server-nameserver:
     - 101.226.4.6 #360
     - 223.5.5.5
@@ -73,9 +75,9 @@ dns:
     "+.lan": 127.0.0.1#lo
     "+.local": 127.0.0.1#lo
     "+.ts.net": 127.0.0.1#tailscale0
-    "rule-set:cn_site,apple":
-      - 122.112.208.1 #huawei
-      - 101.226.4.6
+#    "rule-set:cn_site,apple":
+#      - 122.112.208.1 #huawei
+#      - 101.226.4.6
 
 ntp:
   enable: true
