--- a/config/AIO.yaml
+++ b/config/AIO.yaml
@@ -16,7 +16,7 @@ proxy-providers:
     url: "http://172.16.1.50:3001/D2UhuYViWtqwddacM4ss/download/collection/AIO"
 
 mixed-port: 7890
-ipv6: true
+ipv6: false
 log-level: warning
 allow-lan: true
 unified-delay: true
@@ -58,7 +58,7 @@ tun:
 
 dns:
   enable: true
-  ipv6: true
+  ipv6: false
   respect-rules: true
   listen: 0.0.0.0:1053
   enhanced-mode: redir-host
@@ -105,11 +105,11 @@ proxy-groups:
   - {name: MATCH, icon: https://raw.ihtw.moe/https://github.com/lige47/QuanX-icon-rule/raw/main/icon/shutiao.png, <<: *pr}
 
 # 分隔,下面是地区分组
-  - {name: 🇭🇰 香港, <<: *url-test, filter: "🇭🇰|香港|HK|Hong"}
-  - {name: 🇺🇸 美国, <<: *url-test, filter: "🇺🇸|美国|US|United States", include-all: true}
-  - {name: 🇸🇬 新加坡, <<: *url-test, filter: "🇸🇬|新加坡|SG|Singapore"}
-  - {name: 🇯🇵 日本, <<: *url-test, filter: "🇯🇵|日本|东京|JP|Japan"}
-  - {name: 🇼🇸 台湾, <<: *url-test, filter: "🇨🇳|🇹🇼|台湾|TW|Taiwan"}
+  - {name: 🇭🇰 香港, <<: *url-test, filter: "🇭🇰|香港|HK"}
+  - {name: 🇺🇸 美国, <<: *url-test, filter: "🇺🇸|美国|US", include-all: true}
+  - {name: 🇸🇬 新加坡, <<: *url-test, filter: "🇸🇬|新加坡|SG"}
+  - {name: 🇯🇵 日本, <<: *url-test, filter: "🇯🇵|日本|JP"}
+  - {name: 🇼🇸 台湾, <<: *url-test, filter: "🇹🇼|台湾|TW"}
   - {name: 低倍率, icon: https://raw.ihtw.moe/https://github.com/lige47/QuanX-icon-rule/raw/main/icon/duck(1).png, <<: *fallback, filter: "(?i)(0\\.\\d+)"}
   - {name: 其他, icon: https://raw.ihtw.moe/https://github.com/lige47/QuanX-icon-rule/raw/main/icon/XXAI.png, type: select, include-all-providers: true, exclude-filter: "HK|US|SG|JP|TW|LAN"}
 
