--- a/config/AIO.yaml
+++ b/config/AIO.yaml
@@ -19,6 +19,8 @@ mixed-port: 7890
 ipv6: false
 log-level: warning
 allow-lan: true
+skip-auth-prefixes:
+- 127.0.0.1/8
 unified-delay: true
 tcp-concurrent: true
 external-ui: ui
