--- a/.github/workflows/merge.yaml
+++ b/.github/workflows/merge.yaml
@@ -24,7 +24,7 @@ jobs:
     - name: Convert AdRules and oisd
       run: |
         curl https://adrules.top/adrules_domainset.txt -o adrules_domainset.txt
-        curl https://small.oisd.nl/domainswild2 -o oisd.txt
+        curl https://big.oisd.nl/domainswild2 -o oisd.txt
         cat adrules_domainset.txt oisd.txt | sed '/^#/d' | sort | uniq > combined.txt
         awk '/^\+\./ {gsub(/^\+/, "*"); print}' combined.txt > exclude_list.txt
         awk 'NR==FNR {exclude[$0]; next} !($0 in exclude)' exclude_list.txt combined.txt | sort | uniq > ADs_merged_temp.txt
