--- a/config/AIB.yaml
+++ b/config/AIB.yaml
@@ -13,11 +13,11 @@ proxies:
 proxy-providers:
   Sub-Store:
     <<: *p
-    url: "http://172.16.1.50:3001/D2UhuYViWtqwddacM4ss/download/collection/AIO"
+    url: "此处填入你的订阅地址"
 
 mixed-port: 7890
 ipv6: false
-log-level: warning
+log-level: silent
 allow-lan: true
 skip-auth-prefixes:
 - 127.0.0.1/8
@@ -65,21 +65,19 @@ dns:
   listen: 0.0.0.0:1053
   enhanced-mode: redir-host
   nameserver:
-    - "https://101.34.254.32/ihtw" # mine,use at ur own risk!
-#  nameserver:
-#    - "https://208.67.222.2/dns-query"
-#    - "https://9.9.9.9/dns-query"
+    - "https://208.67.222.2/dns-query"
+    - "https://9.9.9.9/dns-query"
   proxy-server-nameserver:
-    - 101.226.4.6 #360
     - 223.5.5.5
+    - 101.226.4.6 #360
   nameserver-policy:
     "*": 127.0.0.1#lo
     "+.lan": 127.0.0.1#lo
     "+.local": 127.0.0.1#lo
     "+.ts.net": 127.0.0.1#tailscale0
-#    "rule-set:cn_site,apple":
-#      - 122.112.208.1 #huawei
-#      - 101.226.4.6
+    "rule-set:cn_site,apple":
+      - 122.112.208.1 #huawei
+      - 101.226.4.6
 
 ntp:
   enable: true
